--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,13 @@ jobs:
             - uses: actions/checkout@v2
             - uses: actions/setup-node@v1
               with: 
-                  node-version: 16
+                  node-version: '16'
+            - name: Build App 
             - run: yarn
-            - run: yarn test
             - run: yarn build
+            - name: Deploy App to githug pages
+            uses: peaceiris/actions-gh-pages@v3
+            with:
+              github_token: ${{ secrets.GITHUB_TOKEN }}
+              publish_dir: './build'
+
