--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,24 +1,24 @@
-name: Hello github actions
+name: deploy
 
-on: 
+on:
   push:
-    branches: ["*"]
+    branches:
+      - master
 
 jobs:
-  deploy: 
+  deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
-        with: 
-          node-version: '16'
-      - name: Build App 
+        with:
+          node-version: '14.x'
+      - name: Build web-app
         run: |
           yarn
           yarn build
-      - name: Deploy App to githug pages
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: './build'
-
+      - name: Deploy to gh-pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./build
